# Blinker

./: .gitignore  CMakeLists.txt  README.md  blinker.py  client.py  cursor.py  cursor_server.cpp  ear.py  requirements.txt  settings.py  setup.cfg  test.py  todo.md  todo.txt  tox.ini  utils.py
.github/workflows/: tests.yaml
misc/: landmarks.txt  todo.md
src/blinker/: client.py  ear.py  utils.py
src/blinker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_ear.py
