[metadata]
name = blinker
description = Mouse controller built with MediaPipe and OpenCV
author = Aiden Mitchell
platforms = win32
license = MIT

[options]
packages = find:
package_dir = 
    =src
install_requires =
    numpy
    scipy
    opencv-python
    mediapipe
    pytest
python_requires = >=3.11

[options.packages.find]
where = src